# set-trade-daily-summary

./: README.md  main.py  pyproject.toml  trade.csv
