[tool.poetry]
name = "set-trade-daily-summary"
version = "0.1.0"
description = ""
authors = ["Vikrom Narula <vikrom.nar@gmail.com>"]
readme = "README.md"
packages = [{include = "set_trade_daily_summary"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
